# sdk-for-python

./: .travis.yml  CHANGELOG.md  FindError.py  README.md  pyproject.toml  requirements.txt  setup.py  text.txt
.github/ISSUE_TEMPLATE/: bug.yaml  documentation.yaml  feature.yaml
.github/workflows/: publish.yml
appwrite/: client.py  exception.py
appwrite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
appwrite/encoders/: value_class_encoder.py
appwrite/enums/: adapter.py  attribute_status.py  auth_method.py  authentication_factor.py  authenticator_factor.py  authenticator_provider.py  authenticator_type.py  backup_services.py  billing_plan_group.py  browser.py  browser_permission.py  browser_theme.py  build_runtime.py  column_status.py  compression.py  credit_card.py  database_status.py  database_type.py  databases_index_type.py  deployment_download_type.py  deployment_status.py  documents_db_index_type.py  email_template_locale.py  email_template_type.py  encryption.py  execution_method.py  execution_status.py  execution_trigger.py  factor.py  flag.py  framework.py  health_antivirus_status.py  health_check_status.py  health_queue_name.py  image_format.py  image_gravity.py  index_status.py  index_type.py  message_priority.py  message_status.py  (+50 more)
appwrite/models/: __init__.py  activity_event.py  activity_event_list.py  additional_resource.py  algo_argon2.py  algo_bcrypt.py  algo_md5.py  algo_phpass.py  algo_scrypt.py  algo_scrypt_modified.py  algo_sha.py  app.py  app_installation.py  app_installation_list.py  app_key.py  app_key_list.py  (+274 more)
test/: test_query.py
(+772 files in other folders)
